--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,9 +23,10 @@
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
+    "expo-image-picker": "^16.0.4",
     "expo-linear-gradient": "^14.0.1",
     "expo-linking": "~7.0.3",
-    "expo-router": "^4.0.11",
+    "expo-router": "^4.0.17",
     "expo-splash-screen": "~0.29.18",
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
