--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,8 @@
     "@react-native-firebase/auth": "^21.10.0",
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
-    "@react-navigation/native": "^7.0.0",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/stack": "^7.1.1",
     "axios": "^1.8.1",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
@@ -45,7 +46,7 @@
     "react-native-get-random-values": "^1.11.0",
     "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "^4.12.0",
+    "react-native-safe-area-context": "^4.14.1",
     "react-native-screens": "~4.1.0",
     "react-native-svg": "^15.11.2",
     "react-native-toast-message": "^2.2.1",
