--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,9 @@
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
+    "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.8.1",
+    "expo": "~52.0.38",
     "expo-auth-session": "^6.0.3",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
@@ -55,9 +57,9 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "^13.13.4",
+    "react-redux": "^9.2.0",
     "tailwind-rn": "^4.2.0",
-    "tailwindcss": "^3.4.16",
-    "expo": "~52.0.38"
+    "tailwindcss": "^3.4.16"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
